WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111912
Video size calculated incorrectly when PLUGIN_PROXY_FOR_VIDEO
https://bugs.webkit.org/show_bug.cgi?id=111912
Summary
Video size calculated incorrectly when PLUGIN_PROXY_FOR_VIDEO
Eric Carlson
Reported
2013-03-08 18:38:25 PST
MediaControlTextTrackContainerElement::updateSizes calculates the video size incorrectly when ENABLE_ PLUGIN_PROXY_FOR_VIDEO is defined.
Attachments
Proposed patch
(1.86 KB, patch)
2013-03-08 18:43 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-03-08 18:38:40 PST
<
rdar://problem/13384392
>
Eric Carlson
Comment 2
2013-03-08 18:43:46 PST
Created
attachment 192323
[details]
Proposed patch
WebKit Review Bot
Comment 3
2013-03-09 11:45:53 PST
Comment on
attachment 192323
[details]
Proposed patch Clearing flags on attachment: 192323 Committed
r145320
: <
http://trac.webkit.org/changeset/145320
>
WebKit Review Bot
Comment 4
2013-03-09 11:45:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug