Video size calculated incorrectly when PLUGIN_PROXY_FOR_VIDEO https://bugs.webkit.org/show_bug.cgi?id=111912

Reviewed by Dean Jackson.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateSizes): We use RenderPart when
    PLUGIN_PROXY_FOR_VIDEO is defined, not RenderVideo.


Canonical link: https://commits.webkit.org/130283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145320 268f45cc-cd09-0410-ab3c-d52691b4dbfc